<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizzFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/quizzFragment_questionTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:padding="4dp"
        android:layout_weight="2"
        android:background="@color/teal_700"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/question_text" />

    <Button
        android:id="@+id/quizzFragment_answer1Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="#6200EE"
        android:text="@string/answer1"/>
    
    <Button
        android:id="@+id/quizzFragment_answer2Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="#6200EE"
        android:text="@string/answer2"/>

    <Button
        android:id="@+id/quizzFragment_answer3Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="#6200EE"
        android:text="@string/answer3"/>

    <Button
        android:id="@+id/quizzFragment_answer4Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="#6200EE"
        android:text="@string/answer4"/>

    <LinearLayout
        android:id="@+id/quizzFragment_validityFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/validityFragment_validityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/validity_text"
            android:textAlignment="textEnd"
            android:visibility="invisible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#767573"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:textSize="18sp"
            android:text="@string/next_button"
            android:visibility="invisible"
            tools:visibility="visible"/>
    </LinearLayout>

</LinearLayout>

