<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200"
    tools:context=".ui.welcome.WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->
      <TextView
        android:id="@+id/welcomeFragment_welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_wrapper"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="60dp"
        android:padding="30dp"
        android:background="#fef5e7"
          android:textColor="@color/black"/>

    <TextView
        android:id="@+id/welcomeFragment_usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_horizontal"
        android:text="@string/your_name_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/welcomeFragment_usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:hint="@string/your_name_edittext"/>

    <Button
        android:id="@+id/welcomeFragment_playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingHorizontal="24dp"
        android:text="@string/play_button"
        android:textSize="14sp"
        android:background="@color/teal_700"/>
</LinearLayout>